# nvlang

./: LICENSE.md  README.md  autocomplete.js  cmpl.js  dump.txt  file.nv  novas_fire  nvlang_license.json  package.json  termux-keyring_3.13_all.deb  test.nv
cli/: nv+  nv-org  nv_p  nvdbg  nvfind  nvgetprem  nvstats
cli/nvc/: compiler.js  nvc.js  nvcc-pre.js  parser.js  tokenizer.js
core/: .env  .nova_modules.js  getChar-sync.js  keol  m_is.js  nova  nova-opt.js  nova.js  nvopt.js  nvp  ny  ny-compiler.js  test.nv  test.nvc  ts.nv  ts.optimized.nv
core/.nova_modules/test/: dependency.json  root.nv  versions.json
core/.nova_modules/test/.nova_modules/example-repo/: dependency.json  root.nv  versions.json
electron-ui/: main.js
examples/: dsl.nv  list.nv  server.nv
examples/currency-module/: .nvpkginfo  main.nova
examples/currency-module/.nyrc/: main.ny
examples/currency-module/extens.nova/: api.nova
keytmp/: control.tar.xz  data.tar.xz
natives/: init.sh  install.sh  newdir.sh
natives/async/: CMakeLists.txt  index.js
natives/async/src/: addon.cpp
natives/bf/: CMakeLists.txt  index.js
natives/bf/src/: addon.cpp
natives/coroutines/: CMakeLists.txt  package.json
natives/coroutines/src/: addon.cpp
natives/dingle/: CMakeLists.txt  index.js
natives/dingle/src/: addon.cpp
natives/dl/: CMakeLists.txt  index.js  package-lock.json  package.json
natives/dl/src/: addon.cpp
natives/ncurses/: CMakeLists.txt  index.js  package-lock.json  package.json
natives/ncurses/src/: addon.cpp
natives/pi/: CMakeLists.txt  index.js
natives/pi/src/: addon.cpp
natives/pointers/: package-lock.json  package.json
natives/pointers/src/: addon.cpp
natives/python/: CMakeLists.txt  ts.js
natives/python/src/: addon.cpp
natives/signals/: CMakeLists.txt  index.js  package-lock.json  package.json
natives/signals/src/: addon.cpp
natives/types/: package-lock.json
natives/types/src/: addon.cpp
natives/utils/: index.js
natives/utils/src/: addon.cpp
webfirm/: index.js  package.json  webfirm.js
